--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel-preset-next": "^1.4.0",
+    "milligram-cssnext": "^1.0.1",
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-player": "^2.9.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.13.3",
     "eslint": "7",
     "eslint-config-next": "12.0.3"
   }
