--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-player": "^2.9.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "firebase": "8.8.0",
+    "react-firebase-hooks": "^3.0.4"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.13.3",
